--- a/public/styles.css
+++ b/public/styles.css
@@ -18,7 +18,7 @@ body {
         border-radius: theme('borderRadius.lg');
         box-shadow: theme('boxShadow.lg');
         @apply shadow-lg;
-        @apply dark:shadow-slate-500;
+        @apply dark:shadow-darker-mint;
 
     }
 }
